// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render dialog to add a new mfa device with webauthn as preferred type 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  flex: 1;
  margin-bottom: 32px;
}

.c9 {
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #222C59;
  height: 256px;
  margin-bottom: 24px;
  padding: 16px;
}

.c13 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  max-width: 50%;
  width: 100%;
}

.c17 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c18 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-right: 16px;
  width: 45%;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #651FFF;
}

.c21:active {
  background: #354AA4;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c22:active {
  opacity: 0.56;
}

.c22:hover,
.c22:focus {
  background: #2C3A73;
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c10 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c11 {
  display: block;
  outline: none;
  height: 168px;
}

.c20 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c20::-ms-clear {
  display: none;
}

.c20::placeholder {
  opacity: 0.4;
}

.c20:read-only {
  cursor: not-allowed;
}

.c15 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c19 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 16px;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

.c16 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c16 .react-select__control,
.c16 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c16 .react-select__control:hover,
.c16 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c16 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c16 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c16 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c16 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c16 .react-select__menu {
  margin-top: 0px;
}

.c16 .react-select__indicator-separator {
  display: none;
}

.c16 .react-select__loading-indicator {
  display: none;
}

.c16 .react-select--is-disabled .react-select__single-value,
.c16 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c16 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5 "
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Add New Two-Factor Device
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9 c10"
          height="256px"
        >
          <img
            class="c11"
            height="168px"
            src="file_stub"
          />
          <div
            class="c12"
          >
            Enter a name for your hardware key.
          </div>
        </div>
        <div
          class="c13 c5"
        >
          <div
            class="c14"
            data-testid="mfa-select"
            width="100%"
          >
            <label
              class="c15"
              for="select"
            >
              Two-factor type
            </label>
            <div
              class="c16"
            >
              <div
                class="react-select-container css-2b097c-container"
              >
                <div
                  class="react-select__control css-yk16xz-control"
                >
                  <div
                    class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                  >
                    <div
                      class="react-select__single-value css-1uccc91-singleValue"
                    >
                      Hardware Key
                    </div>
                    <input
                      aria-autocomplete="list"
                      class="css-62g3xt-dummyInput"
                      id="select"
                      readonly=""
                      tabindex="0"
                      value=""
                    />
                  </div>
                  <div
                    class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-6q0nyr-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c17"
            width="50%"
          >
            <label
              class="c15"
              for="select"
            >
              Allow Passwordless Login?
            </label>
            <div
              class="c16"
            >
              <div
                class="react-select-container css-2b097c-container"
              >
                <div
                  class="react-select__control css-yk16xz-control"
                >
                  <div
                    class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                  >
                    <div
                      class="react-select__single-value css-1uccc91-singleValue"
                    >
                      no
                    </div>
                    <input
                      aria-autocomplete="list"
                      class="css-62g3xt-dummyInput"
                      id="select"
                      readonly=""
                      tabindex="0"
                      value=""
                    />
                  </div>
                  <div
                    class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-6q0nyr-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c18"
          width="100%"
        >
          <label
            class="c19"
          >
            Device name
            <input
              autocomplete="off"
              class="c20"
              color="text.onLight"
              inputmode="text"
              placeholder="Name"
              type="text"
              value=""
            />
          </label>
        </div>
      </div>
      <div
        class="c13"
      >
        <button
          class="c21"
          kind="primary"
          type="submit"
          width="45%"
        >
          Add device
        </button>
        <button
          class="c22"
          kind="secondary"
          width="30%"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render failed state for dialog to add a new mfa device 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  margin-top: 8px;
  width: 100%;
}

.c7 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c8 {
  box-sizing: border-box;
  flex: 1;
  margin-bottom: 32px;
}

.c10 {
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #222C59;
  height: 256px;
  margin-bottom: 24px;
  padding: 16px;
}

.c14 {
  box-sizing: border-box;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  max-width: 50%;
  width: 100%;
}

.c18 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-right: 16px;
  width: 45%;
}

.c22:active {
  opacity: 0.56;
}

.c22:hover,
.c22:focus {
  background: #651FFF;
}

.c22:active {
  background: #354AA4;
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c23:active {
  opacity: 0.56;
}

.c23:hover,
.c23:focus {
  background: #2C3A73;
}

.c23:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  flex-direction: column;
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c12 {
  display: block;
  outline: none;
  height: 168px;
}

.c21 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c21::-ms-clear {
  display: none;
}

.c21::placeholder {
  opacity: 0.4;
}

.c21:read-only {
  cursor: not-allowed;
}

.c16 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c20 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 16px;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

.c17 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c17 .react-select__control,
.c17 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c17 .react-select__control:hover,
.c17 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c17 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c17 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c17 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c17 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c17 .react-select__menu {
  margin-top: 0px;
}

.c17 .react-select__indicator-separator {
  display: none;
}

.c17 .react-select__loading-indicator {
  display: none;
}

.c17 .react-select--is-disabled .react-select__single-value,
.c17 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c17 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5 "
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Add New Two-Factor Device
        </div>
      </div>
      <div
        class="c7"
        kind="danger"
        width="100%"
      >
        failed to add device
      </div>
      <div
        class="c8 c9"
      >
        <div
          class="c10 c11"
          height="256px"
        >
          <img
            class="c12"
            height="168px"
            src="file_stub"
          />
          <div
            class="c13"
          >
            Enter a name for your hardware key.
          </div>
        </div>
        <div
          class="c14 c5"
        >
          <div
            class="c15"
            data-testid="mfa-select"
            width="100%"
          >
            <label
              class="c16"
              for="select"
            >
              Two-factor type
            </label>
            <div
              class="c17"
            >
              <div
                class="react-select-container css-2b097c-container"
              >
                <div
                  class="react-select__control css-yk16xz-control"
                >
                  <div
                    class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                  >
                    <div
                      class="react-select__single-value css-1uccc91-singleValue"
                    >
                      Hardware Key
                    </div>
                    <input
                      aria-autocomplete="list"
                      class="css-62g3xt-dummyInput"
                      id="select"
                      readonly=""
                      tabindex="0"
                      value=""
                    />
                  </div>
                  <div
                    class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-6q0nyr-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c18"
            width="50%"
          >
            <label
              class="c16"
              for="select"
            >
              Allow Passwordless Login?
            </label>
            <div
              class="c17"
            >
              <div
                class="react-select-container css-2b097c-container"
              >
                <div
                  class="react-select__control css-yk16xz-control"
                >
                  <div
                    class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                  >
                    <div
                      class="react-select__single-value css-1uccc91-singleValue"
                    >
                      no
                    </div>
                    <input
                      aria-autocomplete="list"
                      class="css-62g3xt-dummyInput"
                      id="select"
                      readonly=""
                      tabindex="0"
                      value=""
                    />
                  </div>
                  <div
                    class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-6q0nyr-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c19"
          width="100%"
        >
          <label
            class="c20"
          >
            Device name
            <input
              autocomplete="off"
              class="c21"
              color="text.onLight"
              inputmode="text"
              placeholder="Name"
              type="text"
              value=""
            />
          </label>
        </div>
      </div>
      <div
        class="c14"
      >
        <button
          class="c22"
          kind="primary"
          type="submit"
          width="45%"
        >
          Add device
        </button>
        <button
          class="c23"
          kind="secondary"
          width="30%"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render failed state for fetching QR Code for dialog to add a new mfa device 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  margin-top: 8px;
  width: 100%;
}

.c7 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c8 {
  box-sizing: border-box;
  flex: 1;
  margin-bottom: 32px;
}

.c10 {
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #222C59;
  height: 256px;
  margin-bottom: 24px;
  padding: 16px;
}

.c12 {
  box-sizing: border-box;
  height: 168px;
}

.c17 {
  box-sizing: border-box;
}

.c18 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  max-width: 50%;
  width: 100%;
}

.c21 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c24 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c25 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-right: 16px;
  width: 45%;
}

.c25:active {
  opacity: 0.56;
}

.c25:hover,
.c25:focus {
  background: #651FFF;
}

.c25:active {
  background: #354AA4;
}

.c25:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c26 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c26:active {
  opacity: 0.56;
}

.c26:hover,
.c26:focus {
  background: #2C3A73;
}

.c26:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  flex-direction: column;
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c13 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c23 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c23::-ms-clear {
  display: none;
}

.c23::placeholder {
  opacity: 0.4;
}

.c23:read-only {
  cursor: not-allowed;
}

.c19 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c22 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c16 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin-top: 8px;
  text-align: center;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(255,255,255,0.56);
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

.c20 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c20 .react-select__control,
.c20 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c20 .react-select__control:hover,
.c20 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c20 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c20 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c20 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c20 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c20 .react-select__menu {
  margin-top: 0px;
}

.c20 .react-select__indicator-separator {
  display: none;
}

.c20 .react-select__loading-indicator {
  display: none;
}

.c20 .react-select--is-disabled .react-select__single-value,
.c20 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c20 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5 "
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Add New Two-Factor Device
        </div>
      </div>
      <div
        class="c7"
        kind="danger"
        width="100%"
      >
        failed to create totp register challenge
      </div>
      <div
        class="c8 c9"
      >
        <div
          class="c10 c11"
          height="256px"
        >
          <div
            class="c12 c13"
            height="168px"
          />
          <div
            class="c14"
            font-size="1"
          >
            Scan the QR Code with any authenticator app and enter the generated code.
             
            <div
              class="c15"
              color="text.secondary"
            >
              We recommend
               
              <a
                class="c16"
                href="https://authy.com/download/"
                rel="noreferrer"
                target="_blank"
              >
                Authy
              </a>
              .
            </div>
          </div>
        </div>
        <div
          class="c17 c5"
        >
          <div
            class="c18"
            data-testid="mfa-select"
            width="100%"
          >
            <label
              class="c19"
              for="select"
            >
              Two-factor type
            </label>
            <div
              class="c20"
            >
              <div
                class="react-select-container css-2b097c-container"
              >
                <div
                  class="react-select__control css-yk16xz-control"
                >
                  <div
                    class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                  >
                    <div
                      class="react-select__single-value css-1uccc91-singleValue"
                    >
                      Authenticator App
                    </div>
                    <input
                      aria-autocomplete="list"
                      class="css-62g3xt-dummyInput"
                      id="select"
                      readonly=""
                      tabindex="0"
                      value=""
                    />
                  </div>
                  <div
                    class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-6q0nyr-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c21"
            width="50%"
          >
            <label
              class="c22"
            >
              Authenticator code
              <input
                autocomplete="one-time-code"
                class="c23"
                color="text.onLight"
                inputmode="numeric"
                placeholder="123 456"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="c24"
          width="100%"
        >
          <label
            class="c22"
          >
            Device name
            <input
              autocomplete="off"
              class="c23"
              color="text.onLight"
              inputmode="text"
              placeholder="Name"
              type="text"
              value=""
            />
          </label>
        </div>
      </div>
      <div
        class="c17"
      >
        <button
          class="c25"
          kind="primary"
          type="submit"
          width="45%"
        >
          Add device
        </button>
        <button
          class="c26"
          kind="secondary"
          width="30%"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
